# oldp-ingestor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  playwright.yml  publish.yml
docs/: architecture.md  ingest-cases-2022-2026.md  lookup.md  politeness.md  sinks.md
docs/providers/de/: by.md  eu.md  eurlex.md  gii.md  hb.md  juris.md  nrw.md  ns.md  rii.md  ris.md  sn.md  sn_ovg.md  sn_verfgh.md
docs/providers/dummy/: dummy.md
scripts/: anomaly-detect.py  bootstrap.sh  check-health.sh  ingest.sh  send-alert.py  weekly-report.sh
src/oldp_ingestor/: cli.py  cli_lookup.py  client.py  court_analysis.py  results.py  settings.py  validation.py
src/oldp_ingestor/providers/: base.py  failure_tracker.py  http_client.py  lookup.py  playwright_client.py  registry.py  scraper_common.py
src/oldp_ingestor/providers/de/: by.py  eu.py  eurlex_laws.py  gii.py  gii_parser.py  hb.py  juris.py  nrw.py  ns.py  rii.py  ris.py  sn.py  (+4 more)
src/oldp_ingestor/sinks/: api.py  base.py  json_file.py
tests/: conftest.py  test_anomaly_detect.py  test_cli.py  test_client.py  test_court_analysis.py  test_eurlex_laws_provider.py  test_failure_tracker.py  test_gii_provider.py  test_lookup.py  test_providers.py  test_real.py  test_registry.py  test_results.py  test_sinks.py  test_validation.py
tests/resources/: playwright_test.html
tests/resources/by/: 1.xml
tests/resources/eurlex/: 32016R0679_de.html
tests/resources/gii/: gii-toc.xml
tests/resources/hb/: 1.html  detail.html
tests/resources/nrw/: 1.html
tests/resources/ns/: 1.html
tests/resources/rii/: file_number_KVRE427811801.xml
tests/resources/sn_ovg/: 1.html
tests/resources/sn_verfgh/: 1.html
(+2 files in other folders)
